# 433_BeagleRover

./: .gitignore  README.md  test.sh  wifi_connect.sh  wifi_init.sh
.github/workflows/: RoverSrc.yml
RoverSrc/: CMakeLists.txt
RoverSrc/app/: CMakeLists.txt
RoverSrc/app/include/: autodrive.h  client.h  handshake.h  server.h  shutdown.h  socket.h
RoverSrc/app/src/: autodrive.c  client.c  handshake.c  main.c  server.c  shutdown.c  socket.c
RoverSrc/hal/: CMakeLists.txt
RoverSrc/hal/include/hal/: JS_input.h  UDP_server.h  accelerometer.h  car_server.h  dfrobot_pirate.h  distance_sensor.h  gyroscope.h  helper.h  joystick.h  joystick_input.h  potentiometer.h  segment_display.h  timeControl.h  wifi_adapter.h
RoverSrc/hal/include/utils/: file_utils.h  gpio_utils.h  i2c_utils.h  pru_utils.h  pwm_utils.h  time_utils.h
RoverSrc/hal/src/: JS_input.c  gpio_utils.c  i2c_utils.c  joystick.c  joystick_input.c  segment_display.c  timeControl.c
RoverSrc/hal/src/hal/: UDP_server.c  accelerometer.c  car_client.c  car_server.c  dfrobot_pirate.c  distance_sensor.c  gyroscope.c  helper.c  joystick.c  potentiometer.c  segment_display.c
RoverSrc/hal/src/utils/: file_utils.c  gpio_utils.c  i2c_utils.c  pru_utils.c  pwm_utils.c  time_utils.c
server/: package-lock.json  package.json  server.js
server/lib/: udp_server.js
server/public/: index.html
server/public/javascripts/: rover_control.js  udp_ui.js
web/: index.html
